# problem_cutter

./: .gitignore  CLAUDE.md  EXTRACTION_SUMMARY.md  NEXT_STEPS.md  NEXT_STEPS_backup_20251108.md  OPENCV_GUIDE.md  README.md  REORGANIZATION_PLAN.md  TEST_RESULTS.md  extract_problems_from_columns.py  extract_problems_strict.py  jobs.db  problem_cutter.ipkg  pyproject.toml  requirements.txt  run_full_extraction.py  test_biology.py  test_biology_with_agent.py  test_biology_with_mathpix.py  test_column_separation_samples.py  test_extract_problems.py  test_langgraph_workflow.py  test_new_extraction.py  test_parallel_workflow.py  test_problem_detection.py  test_samples.py
.specs/: Base.idr  LayoutDetection.idr  OutputFormat.idr  PdfMetadata.idr  ProblemExtraction.idr  README.md  Workflow.idr
AgentTools/: __init__.py  config.py  extraction.py  layout.py  mathpix_coordinate.py  mathpix_validator.py  ocr.py  pdf.py  types.py  validation.py  workflow.py
Review/: 2025-11-14_Formal_Spec_Value.md  2025-11-14_WebApp_Architecture_Review.md  README.md
Specs/: problem-cutter-specs.ipkg
api/: main.py
app/: database.py
core/: __init__.py  base.py  column_linearizer.py  column_separator.py  image_cropper.py  layout_detector.py  mathpix_client.py  ocr_engine.py  output_generator.py  pdf_converter.py  pdf_text_search.py  problem_analyzer.py  problem_boundary.py  problem_cutter.py  problem_extractor.py  result_validator.py  vision_boundary_detector.py  visual_boundary_detector.py  workflow.py
directions/: cutting_pdf.md  view.md
docs/: APP_ARCHITECTURE.md  COLUMN_SEPARATION_GUIDE.md  COLUMN_SEPARATION_SUMMARY.md  OPENCV_GUIDE.md  QUICKSTART.md  validation_issues.md
examples/: detect_layout.py  separate_columns_demo.py
scripts/: debug_ocr.py
tests/: __init__.py  (+5 more)
(+46 files in other folders)
