[project]
name = "pdf-problem-cutter"
version = "0.1.0"
description = "PDF 문제 분리 도구 - OpenCV를 이용한 시험지 문제/정답 자동 분리"
requires-python = ">=3.10"
authors = [
    { name = "Joonho" }
]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.13.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "AgentTools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core"]
omit = ["*/tests/*"]

